--- a/Algorithmic.Mobile/App.xaml
+++ b/Algorithmic.Mobile/App.xaml
@@ -4,24 +4,21 @@
              xmlns:local="clr-namespace:ShareInvest"
              x:Class="ShareInvest.App"
              windows:Application.ImageDirectory="Assets">
+
     <Application.Resources>
+
         <ResourceDictionary>
 
-            <Color x:Key="Primary">#512BD4</Color>
-            <Color x:Key="PrimaryLight">#deedff</Color>
-            <Color x:Key="NormalText">#55575c</Color>
-            <Color x:Key="NormalHeaderText">#404144</Color>
-            <Color x:Key="NormalLightText">#959aa0</Color>
-            <Color x:Key="DrawerTitleTextColor">White</Color>
-            <Style TargetType="NavigationPage">
-                <Setter Property="BarBackgroundColor" Value="{StaticResource Primary}"/>
-                <Setter Property="BarTextColor" Value="{StaticResource DrawerTitleTextColor}"/>
-            </Style>
-            <Style x:Key="PrimaryButton" TargetType="Button">
-                <Setter Property="BackgroundColor" Value="{StaticResource Primary}"/>
-                <Setter Property="TextColor" Value="White"/>
-            </Style>
+            <ResourceDictionary.MergedDictionaries>
+
+                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
+
+                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+
+            </ResourceDictionary.MergedDictionaries>
 
         </ResourceDictionary>
+
     </Application.Resources>
+
 </Application>
